# calculator

./: CMakeLists.txt  README.md
src/: calculator.c  console_ui.c  gtk_ui.c  main.c  operation.c  unit_test_ui.c
src/include/: calculator.h  console_ui.h  gtk_ui.h  operation.h  ui.h  unit_test_ui.h
